# acheon-context

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  main.py  pyproject.toml
.github/workflows/: ci.yml
artifacts/benchmark/: latest.json
artifacts/online/: context-integrity-failure-review.json  context-integrity-latest.json  latest.json
artifacts/reports/impact-audit/: artifact.json  report.html  source-notes.md
contributions/openai/: OFFICIAL_PATH_DECISION.md  PUBLICATION_BOUNDARY.md  README.md  disclosure-manifest.json
contributions/openai/api-feedback/: expected-behavior.md  feedback-notes.jsonl  sanitized-cases.jsonl
contributions/openai/community/: short-summary.en.md  technical-post.en.md
contributions/openai/evals/: DATASET_CARD.md  PR_BODY.md  README.md  VALIDATION.md
docs/: ARCHITECTURE.md  BUILD_WEEK_SUBMISSION.md  CODEX_USAGE.md  DEMO_SCRIPT.md  EVALUATION.md  FINAL_REPORT.md  IMPACT_AUDIT.md  LIMITATIONS.md  OPENAI_INTEGRATION.md  RELEASE_CHECKLIST.md
evals/: README.md  workload.json
scripts/: build_release.py  generate_diagrams.py  run_openai_context_integrity_eval.py  verify_openai_contribution.py  verify_release.py
src/acheon/: __init__.py  audit.py  baselines.py  cli.py  compiler.py  demo.py  models.py  rendering.py  runtime.py  selector.py  server.py  store.py  text.py
tests/: test_baselines.py  test_core.py  test_eval_benchmark.py  test_eval_dataset.py  test_eval_metrics.py  test_openai_contribution.py  test_runtime_server.py
(+16 files in other folders)
